--- a/public/assets_front/css/rev-slider.css
+++ b/public/assets_front/css/rev-slider.css
@@ -310,6 +310,15 @@
     display: block;
 }
 
+.rev_slider .tp-mask-wrap {
+    width: 50vw !important;
+    padding: 5px;
+}
+
+.rev_slider .tp-mask-wrap .tp-caption {
+    min-width: 0 !important;
+}
+
 .rev_slider .tp-mask-wrap .tp-caption,
 .rev_slider .tp-mask-wrap *:last-child,
 .wpb_text_column .rev_slider .tp-mask-wrap .tp-caption,
@@ -1835,14 +1844,14 @@ body.rtl .tp-kbimg {
 
 .bg-slider-1 {
     /* background-color: #5a6259; */
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
     opacity: 0.5;
     width: 100%;
     height: 850px;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 20;
+    /* z-index: 20; */
 }
 
 .title-55 {
@@ -1872,4 +1881,56 @@ body.rtl .tp-kbimg {
     background-color: rgb(230, 213, 79, .1);
     transition: .6s ease;
     user-select: none;
+}
+
+.container-text-banner {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 99;
+}
+
+.text-banner h2 {
+    font-family: var(--montserrat-bold);
+    font-size: var(--rem-48);
+    color: var(--blanco);
+    text-transform: uppercase;
+}
+
+.text-banner p {
+    font-family: var(--openSans-Regular);
+    font-size: var(--rem-18);
+    color: var(--blanco);
+    line-height: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem !important;
+}
+
+@media screen and (max-width:990px) {
+    .text-banner h2 {
+        font-size: var(--rem-32);
+    }
+}
+
+@media screen and (max-width:768px) {
+    .text-banner h2 {
+        text-align: center;
+        font-size: var(--rem-30);
+    }
+    .text-banner p {
+        text-align: center;
+    }
+    .rev_slider .tp-mask-wrap {
+        width: initial !important;
+        padding: 5px;
+    }
+    .rev_slider .tp-mask-wrap .tp-caption {
+        min-width: 320px !important;
+        margin: 0 auto !important;
+        left: -18px;
+    }
+    .tp-mask-wrap {
+        overflow: unset !important;
+    }
 }
