--- a/public/assets_front/css/timeline.css
+++ b/public/assets_front/css/timeline.css
@@ -1,12 +1,12 @@
  .timeline {
      text-align: center;
-     margin-top:2rem;
+     margin-top: 2rem;
  }
  
  .progress-container {
      display: inline-block;
-     /* width: 19%; */
-     width: 20%;
+     width: 19%;
+     /* width: 20%; */
      margin: 0 auto;
      text-align: center;
      position: relative;
@@ -55,8 +55,8 @@
      height: 17px;
      position: relative;
      top: -96px;
-     /* left: 10%; */
-     left: 15%;
+     left: 10%;
+     /* left: 15%; */
      /* background: linear-gradient( 45deg, #1ea4ec, #1ea4ec 4px, #1f8bc5 4px, #1f8bc5 10px); */
      background: linear-gradient(-50deg, var(--acento) 15%, var(--secundario) 77%);
      transition: width 1s cubic-bezier(0.915, 0.015, 0.3, 1.005);
@@ -77,7 +77,7 @@
      position: absolute;
      top: 0;
      z-index: -1;
-     height:192px;
+     height: 192px;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -100,35 +100,31 @@
  }
  
  .progress-tabs .tab-1 {
-     left: calc(70% - 100.5%);
+     left: calc(70% - 108.5%);
      margin: 0 auto;
  }
  
- /* .progress-tabs .tab-2 {
-     left: calc(70% - 84%);
+ .progress-tabs .tab-2 {
+     left: calc(70% - 89.5%);
      margin: 0 auto;
-
- } */
+ }
  
  .progress-tabs .tab-3 {
-     /* left: calc(70% - 64.5%); */
-     left: calc(70% - 80%);
+     left: calc(70% - 70%);
+     /* left: calc(70% - 80%); */
      margin: 0 auto;
-
  }
  
  .progress-tabs .tab-4 {
-     /* left: calc(70% - 45%); */
-     left: calc(70% - 60%);
+     left: calc(70% - 50.5%);
+     /* left: calc(70% - 60%); */
      margin: 0 auto;
-
  }
  
  .progress-tabs .tab-5 {
-     /* left: calc(70% - 25.5%); */
-     left: calc(70% - 39.5%);
+     left: calc(70% - 31%);
+     /* left: calc(70% - 39.5%); */
      margin: 0 auto;
-
  }
  
  .timeline-progress input[id="step-1"]:checked~.progress-tabs .tab-1,
@@ -166,34 +162,43 @@
      width: 0;
  }
  
- /* .timeline-progress input[id="step-2"]:checked~.progress_inner__bar {
+ .timeline-progress input[id="step-2"]:checked~.progress_inner__bar {
      width: 20%;
  }
-  */
+ 
  .timeline-progress input[id="step-3"]:checked~.progress_inner__bar {
-     /* width: 40%; */
-     width: 24%;
+     width: 40%;
+     /* width: 24%; */
  }
  
  .timeline-progress input[id="step-4"]:checked~.progress_inner__bar {
-     /* width: 60%; */
-     width: 44%;
+     width: 60%;
+     /* width: 44%; */
  }
  
  .timeline-progress input[id="step-5"]:checked~.progress_inner__bar {
-     width: 70%;
+     width: 80%;
  }
- .title-timeline{
-    font-family: var(--montserrat);
-    font-size: var(--rem-20);
+ 
+ .title-timeline {
+     font-family: var(--openSans-Regular);
+     font-size: var(--rem-18);
  }
-.title-timeline a{
-    color:var(--negro);
-    font-size: var(--rem-20);
-    font-family: var(--montserrat);
-    transition: all .3s;
+ 
+ .title-timeline a {
+     color: var(--negro);
+     font-size: var(--rem-18);
+     font-family: var(--openSans-Regular);
+     transition: all .3s;
  }
-.title-timeline a:hover{
-    color:var(--secundario);
-    text-decoration:none;
+ 
+ .title-timeline a:hover {
+     color: var(--secundario);
+     text-decoration: none;
+ }
+ 
+ @media screen and (max-width:1024px) {
+     .progress-tabs .tab-timeline {
+         height: auto;
+     }
  }
