--- a/public/assets_front/css/estilos.css
+++ b/public/assets_front/css/estilos.css
@@ -777,6 +777,10 @@ body {
     scroll-margin: 5rem;
 }
 
+#pasantias {
+    scroll-margin-top: 7.5rem;
+}
+
 .img-logo-servicios {
     width: 110px;
     object-fit: contain;
