--- a/public/assets_front/css/rev-slider.css
+++ b/public/assets_front/css/rev-slider.css
@@ -1843,15 +1843,15 @@ body.rtl .tp-kbimg {
 }
 
 .bg-slider-1 {
-    /* background-color: #5a6259; */
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6)));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     opacity: 0.5;
     width: 100%;
     height: 850px;
     position: absolute;
     top: 0;
     left: 0;
-    /* z-index: 20; */
+    z-index: 20;
 }
 
 .title-55 {
