--- a/public/assets_front/css/estilos.css
+++ b/public/assets_front/css/estilos.css
@@ -82,7 +82,7 @@ html.sr .load-hidden {
 body {
     margin: 0;
     padding: 0;
-    font-family: var(--openSans-Regular);
+    font-family: var(--montserrat);
     background: var(--gris);
     overflow-x: hidden;
 }
@@ -166,7 +166,7 @@ body {
     display: block;
     padding: 0 .8rem;
     color: var(--blanco);
-    font-family: var(--openSans-Semi);
+    font-family: var(--montserrat-semi);
     font-size: var(--rem-18);
     transition: all .3s;
     font-size: 15px;
@@ -174,12 +174,12 @@ body {
 
 .header .menu-desktop .lista-menu.changecolor li a {
     color: var(--title);
-    font-family: var(--openSans-Semi);
+    font-family: var(--montserrat-semi);
 }
 
 .header.backgorund-new .menu-desktop .lista-menu li a {
     color: var(--title);
-    font-family: var(--openSans-Semi);
+    font-family: var(--montserrat-semi);
 }
 
 .header .menu-desktop .lista-menu li a:hover {
@@ -249,7 +249,7 @@ body {
 }
 
 .container-eslogan-text::before {
-    content: '';
+    /* content: '';
     position: absolute;
     top: -65px;
     left: 50%;
@@ -262,7 +262,7 @@ body {
     height: 110px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .title-eslogan {
@@ -915,12 +915,12 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     padding: 2rem 0;
-    column-gap: 25px;
+    /* column-gap: 25px; */
     row-gap: 25px;
 }
 
 .grid-servicios-items {
-    width: 30%;
+    /* width: 30%; */
     text-align: center;
     padding: 1rem;
     display: flex;
@@ -1003,7 +1003,7 @@ body {
     text-decoration: none;
     color: var(--principal);
     display: inline-block;
-    font-family: var(--openSans-Semi);
+    font-family: var(--montserrat-semi);
     text-align: center;
     transition: all .3s;
     position: relative;
@@ -1097,7 +1097,8 @@ body {
 
 .img-modal {
     width: 100%;
-    height: 480px;
+    height: 100%;
+    aspect-ratio: 3/3.6;
     object-fit: cover;
 }
 
@@ -1198,7 +1199,7 @@ body {
 }
 
 .container-testimonios::before {
-    content: 'Testimonios';
+    content: 'Arrozales del Chaco S.A.';
     font-size: var(--rem);
     position: absolute;
     top: 10px;
@@ -1260,9 +1261,46 @@ body {
     opacity: .8;
 }
 
-
 /* ////////////Testimonios//////////////// */
 
+/* ////////////ADC//////////////// */
+.adc {
+    background: var(--gris-two);
+    background-image: url(../images/background.png);
+    background-repeat: repeat;
+    background-position: center;
+    padding: 4rem 0;
+}
+.video-container {
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    position: relative;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+.adc-logo{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    max-width: 220px;
+    margin-bottom: 30px;
+}
+.text-adc {
+    color: var(--principal);
+    font-family: var(--montserrat);
+    font-size: var(--rem-20);
+    text-align: center;
+    margin-bottom: 33px;
+}
+/* ////////////ADC//////////////// */
 
 /* ////////////Contacto//////////////// */
 
@@ -1278,13 +1316,13 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    background: url(../images/fondo-3.png);
-    background-size: cover;
+    background: url(../images/campo.png);
+    /* background-size: cover; */
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 65vh;
-    opacity: .2;
+    height: 100%;
+    background-position: right bottom;
 }
 
 form {
@@ -1421,7 +1459,7 @@ form {
     border-right: transparent;
     border-bottom: 2px solid var(--principal);
     color: var(--principal);
-    font-family: var(--openSans-Semi);
+    font-family: var(--montserrat-semi);
 }
 
 .nav-tabs .nav-link:hover {
@@ -1457,7 +1495,7 @@ form {
     color: #333;
     font-size: 14px;
     text-align: center;
-    font-family: var(--openSans-Semi);
+    font-family: var(--montserrat-semi);
 }
 
 .lista-info li a:hover {
@@ -1610,7 +1648,7 @@ form {
 }
 
 .fecha {
-    font-family: var(--openSans-Regular);
+    font-family: var(--montserrat);
     position: absolute;
     left: 40px;
     bottom: 0;
@@ -1636,7 +1674,7 @@ form {
 .container-info-blog a {
     color: var(--negro);
     font-size: 1.25rem;
-    font-family: var(--openSans-Semi);
+    font-family: var(--montserrat-semi);
     transition: all .3s;
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -1657,7 +1695,7 @@ form {
 }
 
 .blog-fecha .fuente {
-    font-family: var(--openSans-Regular);
+    font-family: var(--montserrat);
     margin-bottom: 0;
     color: var(--negro);
     font-size: 14px;
@@ -1764,7 +1802,7 @@ form {
 }
 
 .lista-filtros li a {
-    font-weight: var(--openSans-Semi);
+    font-weight: var(--montserrat-semi);
     color: var(--gris-texto);
     font-size: var(--rem-18);
     transition: all .3s;
@@ -1785,16 +1823,6 @@ form {
     padding-top: 3rem;
     background: var(--principal);
     position: relative;
-}
-
-.footer::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background: var(--border);
 }
 
 .container-footer-enlaces {
@@ -2009,6 +2037,11 @@ form {
     .container-testimonios {
         width: 100%;
     }
+    @media (max-width:480px) {
+      h2.subtitle-eslogan {
+        font-size: 5vw;
+      }
+    }
     /* ////////timeline//////// */
     .timeline {
         display: none;
@@ -2040,7 +2073,7 @@ form {
     }
     .container-image-timeline p {
         margin-top: .5rem;
-        font-family: var(--openSans-Semi);
+        font-family: var(--montserrat-semi);
         margin-bottom: 0;
     }
     .img-timeline-mobile {
