--- a/public/assets_front/css/estilos.css
+++ b/public/assets_front/css/estilos.css
@@ -1170,6 +1170,7 @@ body {
     }
     .grid-pasantia-item img {
         height: auto;
+        aspect-ratio: 1;
     }
     .grid-pasantia {
         grid-row-gap: 30px;
