--- a/public/assets_front/css/estilos.css
+++ b/public/assets_front/css/estilos.css
@@ -778,12 +778,13 @@ body {
 
 .container-mapa-info {
     position: sticky;
-    top: 30%;
+    top: 25%;
     right: 10%;
     padding: 2.5rem;
     border-radius: 4px;
     width: 380px;
     margin-left: auto;
+    margin-right: 8rem;
     z-index: 99;
     background: var(--blanco);
     box-shadow: 0px 10px 60px 0px rgb(0 0 0 / 5%);
