--- a/public/assets_front/css/estilos.css
+++ b/public/assets_front/css/estilos.css
@@ -1615,9 +1615,13 @@ form {
     text-align: center;
 }
 
-.lista-info li a:nth-child(2) p,
-.lista-info li a:nth-child(4) p {
+.lista-info li a p:nth-child(2),
+.lista-info li a p:nth-child(4) {
     display: none;
+}
+
+.lista-info li a p:nth-child(2) {
+    text-align: center;
 }
 
 .lista-info li a:hover {
